--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.forsazhgames.newsvk"
+        applicationId "com.forsazhgames.simplevk"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'net.danlew:android.joda:2.4.0'
 }
