--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.forsazhgames.newsvk">
+    package="com.forsazhgames.simplevk">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".VKApplication"
+        android:name="com.forsazhgames.simplevk.VKApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name="com.forsazhgames.simplevk.Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.NewsActivity" />
-        <activity android:name=".Activity.NewsDetailActivity" />
+        <activity android:name="com.forsazhgames.simplevk.Activity.NewsActivity" />
+        <activity android:name="com.forsazhgames.simplevk.Activity.NewsDetailActivity" />
+        <activity android:name="com.forsazhgames.simplevk.Activity.BirthdayActivity" />
         <activity
             android:name="com.vk.sdk.VKServiceActivity"
             android:label="ServiceActivity"
